added /mayor/last updated swagger removed rest info from readme
