# docs/swagger.yaml
@@ -135,19 +135,34 @@ paths:
     get:
       consumes:
       - '*/*'
-      description: Returns the current mayor
+      description: Returns the name of the current mayor
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/model.Candidate'
+            type: string
         "400":
           description: Bad Request
-        "404":
-          description: Not Found
-      summary: Get the current mayor
+      summary: Get the name of the current mayor
+      tags:
+      - Mayor
+  /mayor/last:
+    get:
+      consumes:
+      - '*/*'
+      description: Returns the name of the last mayor
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+      summary: Get the name of the last mayor
       tags:
       - Mayor
   /mayor/names:
